--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			
 			
-			<input type="search" oninput='geocodeThis()' autocomplete="off" class="search-box" id="search-box" placeholder="Search for a city..." />			
+			<input type="text" oninput='geocodeThis()' autocomplete="off" class="search-box" id="search-box" placeholder="Search for a city..." />			
 		</header>
 		
 		<!-- MIDDEN -->
