--- a/README.html
+++ b/README.html
@@ -14,11 +14,10 @@
 
 <center> <h1>Welkom op mijn website</h1>
 <p>
-  Hier vindt u een korte uitleg over de website dat ik heb gemaakt.
-Elon Musk wilde van ons een geanimeerde klok waar de huidige aardse tijd op verschillende schermen te zien is. Via javascript heb ik de tijd maar ook de datum weten te coderen. Via TweenMax heb ik de animatie op de website kunnen toepassen.  
+ Na een lange tijd in Mars te hebben gewoond mogen er nu 32 mensen weer terug naar de aarde. Om de ex-Marsbewoners te helpen, heeft Elon Musk de Haagse Hogeschool gevraag voor een live dashboard. Waar de ex-Marsbewoners de ideale landingsplaatsen kunnen vinden.
 </p>
 <p>
-Als u op de website bent, ziet u de klok die Elon Musk van ons wilden. Gelijk onder de klok ziet u een raam met een uitzicht op de melkweg. Als animatie op de website ziet u dat de sterren bewegen, de astronaut in de ruimte zweven en de aarde om zijn eigen as heen draaien. Als extra komt er om de 10 seconde een astronaut naar buiten kijken.
+De website bestaat uit twee delen. De linkerkant, ook wel het witte deel van de website, is het zoekgedeelte en aan de rechterkant is de plattegrond van de aarde. Op het moment dat je op een van de raketten klikt krijg je een korte uitleg over die locatie. Wanneer een plaats of land wordt ingevoerd in de zoekbalk, zoomt de kaart naar dat deel en toont het witte deel van de website de plaats, datum, temperatuur, etc. Bij mobiele en staande iPad-versies komt het witte zoekgedeelte boven aan te staan en de plattegrond onderaan.
 </p>
   <p>
 Tijdens het maken van de website heb ik de volgende afmetingen gebruikt in Chrome:
@@ -58,7 +57,7 @@ border-radius: 5px;">
 <img src="img/320x568.jpg" height="250px">
 
 <br/>
-<p><a href="https://elmas04.github.io/17105226-CMD-XT2-challenge3/">KLIK HIER OM NAAR CHALLENGE 2 TE GAAN</a></p>
+<p><a href="https://elmas04.github.io/17105226-CMD-XT2-challenge3/"> KLIK HIER OM NAAR CHALLENGE 3 TE GAAN </a></p>
 </center>
    </container>                                                                  
 </body>
